--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
   <div class="container">
-    <a class="navbar-brand brand fw-bold" style="font-size: 28px;" href="index.html">
-      A<span style="color: #c0d9d9;">lloc</span>
+    <a class="navbar-brand brand" style="font-size: 28px; font-weight: 550;" href="index.html">
+      A<span style="color: #7c5cff;">lloc</span>
     </a>
 
     <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Simulasi</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="simulasi.html">Simulasi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="materi.html">Materi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="latihan.html">Latihan</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil</a></li>
