--- a/public/css/latihan.css
+++ b/public/css/latihan.css
@@ -21,7 +21,7 @@ body {
 
 /* ===== TITLE CLEAN & MINIMAL ===== */
 .quiz-title-clean {
-  font-size: 1.45rem;
+  font-size: 1.6rem;
   font-weight: 700;
   color: #e8f2f4;
   margin: 0;
@@ -80,6 +80,12 @@ body {
 
 .question-area {
   margin-top: 18px;
+}
+
+#quizRoot h4 + div {
+  font-size: 1.20rem; 
+  line-height: 1.6;              
+  font-weight: 500;              
 }
 
 /* MCQ options */
@@ -202,13 +208,6 @@ body {
 
 .drop-hover {
   outline: 2px dashed rgba(200, 230, 255, 0.5);
-}
-
-/* small controls */
-.controls {
-  display: flex;
-  gap: 8px;
-  flex-wrap: wrap;
 }
 
 .btn-small {
@@ -1251,7 +1250,7 @@ button#nextBtn.processing {
   }
 
   .quiz-title-clean {
-    font-size: 1.2rem; /* Kecilkan judul */
+    font-size: 1.5rem; /* Kecilkan judul */
     margin-bottom: 5px;
   }
 
